<resources>
    <string name="app_name">AndroidProjectCollection</string>
    <string name="btnLabel">Button</string>

    <!-- Layout Exercise -->
    <string name="btnLayExer">Layout Exercise</string>
    <string name="user0">Steve</string>
    <string name="userAlex">Alex</string>
    <string name="userCow">Cow</string>
    <string name="userSheep">Sheep</string>
    <string name="userPig">Pig</string>
    <string name="userEnderman">Enderman</string>
    <string name="userVillager">Villager</string>
    <string name="userCreeper">Creeper</string>
    <string name="userSkeleton">Skeleton</string>
    <string name="userZombie">Zombie</string>
    <string name="userGuardian">Guardian</string>
    <string name="descLike">Like Button</string>
    <string name="desc0">Zombie about to throw hands with Steve</string>
    <string name="commenting">Comment . . .</string>

    <!-- Button Exercise -->
    <string name="btnBTNExer">Button Exercise</string>
    <string name="btnClose">Close</string>
    <string name="btnToast">Toast</string>
    <string name="btnChangeBG">Change BG</string>
    <string name="btnChangeBtnBG">Change Button BG</string>
    <string name="btnDisappear">Disappear</string>
    <string name="btnReturn">Return</string>

    <!-- Calculator Exercise -->
    <string name="btnCalcExer">Calculator Exercise</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnAdd">+</string>
    <string name="btnMin">-</string>
    <string name="btnMul">×</string>
    <string name="btnDiv">÷</string>
    <string name="btnEqu">=</string>
    <string name="btnDec">.</string>
    <string name="btnClear">Clear</string>

    <!-- Midterm / ColorMatch Activity -->
    <string name="btnMidColor">ColorMatch Exam</string>
    <string name="btnDef"> </string>
    <string name="btnRetName">RETURN</string>
    <string name="btnToWin">TO WIN</string>

    <!-- Connect3 Exercise -->
    <string name="btnCon3Exer">Connect 3 Exercise</string>
    <string name="tvPlayer1">Player Red\'s Turn</string>
    <string name="tvPlayer2">Player Yellow\'s Turn</string>
    <string name="btnRestart">Restart</string>

    <!-- Passing Intents Exercise -->
    <string name="btnPassingIntents">Passing Intents</string>
    <string name="tvFormTitle">Student Registration Form</string>
    <string name="tvCompleteName">Complete Name</string>
    <string name="tvGender">Gender:</string>
    <string name="rbMale">Male</string>
    <string name="rbFemale">Female</string>
    <string name="rbOther">Other</string>
    <string name="tvBdate">Birth Date: </string>
    <string name="tvPhoneNumber">Phone Number: </string>
    <string name="tvEmail">Email Address: </string>
    <string name="btnSubmit">Submit</string>
    <string name="txtFname">First Name:</string>
    <string name="txtLname">Last Name:</string>
    <string name="tvCourse">Course: </string>
    <string name="tvCivilStatus">Civil Status: </string>
    <string name="rbSingle">Single</string>
    <string name="rbMarried">Married</string>
    <string name="rbPreferNotToSay">Prefer not to say</string>
    <string name="tvHeight">Height: </string>
    <string name="tvCM">in cms</string>
    <string name="tvWeight">Weight: </string>
    <string name="tvKG">in kgs</string>
    <string name="tvAddress">Physical Address</string>
    <string name="tvMunicipality">Municipality:</string>
    <string name="tvZIPcode">ZIP Code:</string>
    <string name="tvProvince">Province:</string>
    <string name="tvStudentProfile">Student Profile</string>

    <!-- Fragments Exercise -->
    <string name="btnFragments">Fragments</string>

    <!-- Menus Exercise -->
    <string name="btnMenus">Menus</string>
    <string name="menuChange">Change</string>
    <string name="menuReset">Reset</string>
    <string name="menuExit">Exit</string>
    <string name="menuChangeBtnColor">Button Color</string>
    <string name="menuChangeBtnTxtColor">Text Color</string>
    <string name="menuChangeBtnShape">Button Visibility</string>
    <string name="menuChangeBtnSize">Button Size</string>
    <string name="menuChangeBtnTxt">Button Text</string>
    <string name="txtDefault">HI!</string>
</resources>